kustomize/overlays/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: selecoes-prd
  labels:
    environment: production
    app: selecoes
